objects/SAP_Order_Items__c.object
<CustomObject>
    <description>These are the related items to SAP_Order_Summary__c</description>
    <label>PKI Order Items</label>
    <nameField>
        <label>Order Line Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PKI Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>VAT__c</fullName>
        <label>VAT</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <label>Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>iDocId__c</fullName>
        <label>iDocId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Blocked__c</fullName>
        <description>This is for display Yes or Blank on screen when an item is Blocked</description>
        <formula>IF (fxIsBlocked__c = 1, &quot;Yes&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Blocked</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Id__c</fullName>
        <description>possibly an usused field..</description>
        <label>List Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discounts__c</fullName>
        <label>Discounts</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Course__c</fullName>
        <label>Is Course</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Price__c</fullName>
        <label>Net Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Net_Value__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isRemoved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>when an item is removed from an order, we check the box to show it existed at one time. Useful for UPSERTS (which can;t delete)</description>
        <label>isRemoved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lot_Number__c</fullName>
        <label>Lot Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plant_Name__c</fullName>
        <label>Plant Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issued_Date__c</fullName>
        <label>Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Code__c</fullName>
        <label>Status Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Name__c</fullName>
        <label>Status Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_item_id__c</fullName>
        <description>this is the external ID used for insert linking</description>
        <externalId>true</externalId>
        <label>ext item id</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fxIsBlocked__c</fullName>
        <description>If both fields are blank, we have 0, if any field is not blank, we have a 1. Then Order Summary SUMs this field, and if the SUM is greater than 0, the order is Not Clear</description>
        <formula>/*IF(  ISBLANK(Line_Item_Block_Description__c) &amp;&amp; ISBLANK(Line_Item_Block__c) &amp;&amp;  isRemoved__c=false , 0, 1)*/

/* Join all fields to look for characters, and trim whitespace
then see if field is marked as removed*/

IF (
LEN( TRIM( Billing_Block_Code__c 
&amp; Billing_Block_Description__c 
&amp; Delivery_Block_Code__c 
&amp; Delivery_Block_Description__c 
&amp; Line_Item_Block__c 
&amp; Line_Item_Block_Description__c ))=0  &amp;&amp;  isRemoved__c=false , 0, 1)</formula>
        <label>fxIsBlocked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Batch_Number__c</fullName>
        <label>Batch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Currency__c</fullName>
        <label>Net Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Number__c</fullName>
        <label>Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_Price__c</fullName>
        <label>Extended Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Freight_Charge__c</fullName>
        <label>Freight Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shipment_Route__c</fullName>
        <label>Shipment Route</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Point__c</fullName>
        <label>Shipping Point</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Number__c</fullName>
        <label>Delivery Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Block__c</fullName>
        <label>Line Item Block</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Number__c</fullName>
        <label>Material Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <label>Unit of Measure</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Is_Rejected__c</fullName>
        <label>Line Is Rejected</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Status__c</fullName>
        <label>Line Item Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_Ordered__c</fullName>
        <label>Quantity Ordered</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Date_Accept__c</fullName>
        <description>First date customer will Accept</description>
        <label>First Date Accept</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Freight_Forwarder__c</fullName>
        <label>Freight Forwarder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKI_Order_Summary__c</fullName>
        <description>The items belong to this Order</description>
        <label>PKI Order Summary</label>
        <referenceTo>SAP_Order_Summary__c</referenceTo>
        <relationshipLabel>SAP_Order_Items</relationshipLabel>
        <relationshipName>SAP_Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>item_last_updated__c</fullName>
        <label>item_last_updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Billing_Block_Code__c</fullName>
        <label>Billing Block Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Ship_Date__c</fullName>
        <label>Expected Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Quantity_Confirmed__c</fullName>
        <label>Quantity Confirmed</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adjusted_Unit_Price__c</fullName>
        <label>Adjusted Unit Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Block_Code__c</fullName>
        <label>Delivery Block Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Created_On__c</fullName>
        <label>Shipment Created On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>actual_Order_Number__c</fullName>
        <label>SAP Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Number_SAP__c</fullName>
        <label>Line Item Number SAP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Number_Web__c</fullName>
        <label>Line Item Number Web</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Promotional_Discount__c</fullName>
        <label>Promotional Discount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Info_Carrier__c</fullName>
        <label>Delivery Info Carrier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Specific_Price__c</fullName>
        <label>Customer Specific Price</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scheduled_Delivery_Date__c</fullName>
        <label>Scheduled Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>item_Last_Modified_Date__c</fullName>
        <label>Item Last Modified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Block_Description__c</fullName>
        <label>Billing Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Summarized_Freight_Charge__c</fullName>
        <label>Summarized Freight Charge</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivery_Block_Description__c</fullName>
        <label>Delivery Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Line_Item_Block_Description__c</fullName>
        <description>LineItemBlockDescription</description>
        <label>Line Item Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Info_Tracking_Number__c</fullName>
        <label>Delivery Info Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>